fix: post overflow issue

--- a/src/components/posts/index.scss
+++ b/src/components/posts/index.scss
@@ -3,25 +3,28 @@
   margin: 0 auto;
   display: grid;
   gap: 1.6rem;
+
   .feed-post {
+    overflow: hidden;
     display: flex;
-    flex-direction: column;
-    // max-width: 100%;
-    margin-top: 1rem;
     margin-inline: 10px;
+    flex-direction: column;
+    margin-top: 1rem;
     background-color: rgb(228, 222, 222);
     color: rgb(40, 40, 40);
     border-radius: 1rem;
     padding-bottom: 1rem;
 
+    .post__body {
+      word-wrap: break-word;
+    }
     .post__title {
+      word-wrap: break-word;
+
       font-size: 1.5rem;
-      overflow-wrap: break-word;
       padding: 1rem 0rem;
     }
     .post__img-container {
-      display: flex;
-      justify-content: center;
       width: 100%;
 
       .post__img-img {
@@ -34,6 +37,7 @@
     .post-link {
       text-decoration: none;
       color: inherit;
+      max-width: 100%;
     }
 
     .post__text {
@@ -41,8 +45,9 @@
     }
 
     .post__edit-section {
+      width: 100%;
       display: flex;
-      justify-content: end;
+      justify-content: flex-end;
       gap: 1.2rem;
       .post__delete {
         color: red;
@@ -67,4 +72,8 @@
     padding: 1rem;
     height: 45px;
   }
+}
+
+.green {
+  border: 1px solid green;
 }
